{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 7,
  "lineage": "b87f0882-ccf4-1357-a874-7ba1ffbbdb2f",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:878659432321:subnet/subnet-01dec0964ec4093a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "available_ip_address_count": 4090,
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01dec0964ec4093a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "878659432321",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "devops-2a"
            },
            "vpc_id": "vpc-03054b36e602eadec"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b4624933067d393a",
            "arn": "arn:aws:ec2:us-east-2:878659432321:instance/i-0b4e586988e203b66",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b4e586988e203b66",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01f4bb1d48f690f94",
            "private_dns": "ip-172-31-3-180.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.3.180",
            "public_dns": "ec2-18-222-117-63.us-east-2.compute.amazonaws.com",
            "public_ip": "18.222.117.63",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f73280af1f6ace0d",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0a2415d704fc00c1d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01dec0964ec4093a1",
            "tags": {
              "Name": "AMI",
              "Owner": "rrichter",
              "Project": "oddball",
              "Value": "ami-0b4624933067d393a"
            },
            "tags_all": {
              "Name": "AMI",
              "Owner": "rrichter",
              "Project": "oddball",
              "Value": "ami-0b4624933067d393a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a2415d704fc00c1d"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "data.aws_subnet.target"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:878659432321:security-group/sg-0a2415d704fc00c1d",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-0a2415d704fc00c1d",
            "ingress": [],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "878659432321",
            "revoke_rules_on_delete": false,
            "tags": {
              "Owner": "rrichter",
              "Project": "oddball"
            },
            "tags_all": {
              "Owner": "rrichter",
              "Project": "oddball"
            },
            "timeouts": null,
            "vpc_id": "vpc-03054b36e602eadec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnet.target"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:878659432321:security-group-rule/sgr-0e2cbd3082cc632ec",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0e2cbd3082cc632ec",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a2415d704fc00c1d",
            "security_group_rule_id": "sgr-0e2cbd3082cc632ec",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls",
            "data.aws_subnet.target"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:878659432321:security-group-rule/sgr-0c91004002c409a47",
            "cidr_ipv4": "172.31.0.0/20",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0c91004002c409a47",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a2415d704fc00c1d",
            "security_group_rule_id": "sgr-0c91004002c409a47",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls",
            "data.aws_subnet.target"
          ]
        }
      ]
    }
  ]
}